[gd_scene load_steps=22 format=3 uid="uid://dv6kjjc0e63lr"]

[ext_resource type="Script" path="res://Scripts/entity.gd" id="1_5x0ah"]
[ext_resource type="Texture2D" uid="uid://dykqlo50ioccn" path="res://Sprites/PastryAttack.png" id="2_5eg03"]
[ext_resource type="Texture2D" uid="uid://dlijegfn4pj3u" path="res://Sprites/PastryIdle.png" id="4_0r54s"]
[ext_resource type="Texture2D" uid="uid://dbsrgs4h61pls" path="res://Sprites/PastryMove.png" id="4_55wld"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ikuex"]
radius = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0fgc8"]
atlas = ExtResource("2_5eg03")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kk1g"]
atlas = ExtResource("2_5eg03")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdgq1"]
atlas = ExtResource("2_5eg03")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yms7b"]
atlas = ExtResource("2_5eg03")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1j23"]
atlas = ExtResource("2_5eg03")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7uqe"]
atlas = ExtResource("2_5eg03")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1araq"]
atlas = ExtResource("4_0r54s")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_suakc"]
atlas = ExtResource("4_0r54s")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdawj"]
atlas = ExtResource("4_0r54s")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wax1g"]
atlas = ExtResource("4_0r54s")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ihal"]
atlas = ExtResource("4_55wld")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef3ly"]
atlas = ExtResource("4_55wld")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_efmbj"]
atlas = ExtResource("4_55wld")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf31x"]
atlas = ExtResource("4_55wld")
region = Rect2(768, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_uhsie"]
animations = [{
"frames": [],
"loop": true,
"name": &"EmptyAnimation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fgc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kk1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdgq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yms7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1j23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7uqe")
}],
"loop": true,
"name": &"PastryAttack",
"speed": 6.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_1araq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suakc")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_hdawj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wax1g")
}],
"loop": true,
"name": &"PastryIdle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ihal")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_ef3ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efmbj")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_hf31x")
}],
"loop": true,
"name": &"PastryMove",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xftjd"]
radius = 100.0

[node name="Entity" type="CharacterBody2D"]
collision_layer = 3
slide_on_ceiling = false
script = ExtResource("1_5x0ah")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ikuex")
one_way_collision_margin = 32.0

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_uhsie")
animation = &"PastryAttack"
frame_progress = 0.341485

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="DetectionCircle" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_xftjd")
one_way_collision_margin = 32.0

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="AttackAreaCircle" type="CollisionShape2D" parent="AttackArea"]
scale = Vector2(0.3, 0.3)
shape = SubResource("CircleShape2D_xftjd")
one_way_collision_margin = 32.0

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
